tlsroute-passthrough/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-tls-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls
      hostname: "bookinfo.cilium.rocks"
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
